feat(design): Initial rewrite to more modern design

--- a/src/app/PodcstApp.module.css
+++ b/src/app/PodcstApp.module.css
@@ -1,6 +1,4 @@
-@media only screen and (min-width: 900px) {
-  .mainContainer {
-    transition: 0.45s ease-in-out;
-    padding-left: var(--dimen-drawer-width);
-  }
+.main {
+  min-height: 100vh;
+  padding-bottom: 120px;
 }
