--- a/src/ui/PodcastTile/PodcastTile.module.css
+++ b/src/ui/PodcastTile/PodcastTile.module.css
@@ -1,32 +1,55 @@
-.wrapper {
-  background-image: url(/icons/launcher-dark.svg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: 100px;
-}
-
-:root.light {
-  background-image: url(/icons/launcher-light.svg);
-}
-
 .tile {
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  height: 200px;
-  justify-content: flex-end;
-  padding: 8px;
+  display: block;
+}
+
+.artwork {
+  position: relative;
+  aspect-ratio: 1;
+  margin-bottom: var(--space-4);
+}
+
+.artwork img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: 1px solid var(--color-rule);
+}
+
+.tile:hover .artwork img {
+  opacity: 0.9;
 }
 
 .title {
-  font-size: var(--dimen-font-secondary);
-  font-weight: bold;
-  margin-bottom: 8px;
+  font-family: var(--font-serif);
+  font-size: var(--text-lg);
+  line-height: var(--leading-snug);
+  color: var(--color-ink);
+  margin-bottom: var(--space-1);
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .author {
-  font-size: var(--dimen-font-smallest);
-  font-weight: lighter;
+  font-size: var(--text-sm);
+  color: var(--color-ink-secondary);
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+@media (max-width: 640px) {
+  .title {
+    font-size: var(--text-base);
+  }
+
+  .author {
+    font-size: var(--text-xs);
+  }
+
+  .artwork {
+    margin-bottom: var(--space-3);
+  }
 }
